--- a/cs180/proj5/index.html
+++ b/cs180/proj5/index.html
@@ -882,12 +882,12 @@
         <br>
         <br>
 
-        <h1 align="middle"><a href="#4b">Project 4B:Feature Matching for Auto-Stitching</a>
+        <h1 align="middle"><a href="#5b">Project 5B: Diffusion Models from Scratch</a>
         </h1>
 
         <div class="bounding-box">
 
-            <h2 align="middle" id="4b">Overview</h2>
+            <h2 align="middle" id="5b">Overview</h2>
 
             The second part of the project will automatically stitch together images into a mosaic by finding and
             matching
