--- a/cs180/proj5/index.html
+++ b/cs180/proj5/index.html
@@ -126,7 +126,7 @@
             <p>
                 The quality of the images becomes much more clearer after stage 2. It seems that all of the images fit
                 the given prompt pretty well. For each of the prompts, as we increase the number of inference steps it
-                seems that the images become much more detailed and fancy. For example in the man iwth the hat it looks
+                seems that the images become much more detailed and fancy. For example in the man with the hat it looks
                 more realistic and the snow has a lot more details with the shading.
             </p>
         </div>
